# my-data-platform

./: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
app/: Dockerfile  pyproject.toml
app/src/: data.py  main.py
app/src/aws/: s3.py
app/src/templates/: home.html
aws/: init-aws.sh  localstack.md
terraform/: datastores.tf  main.tf  variables.tf
