[project]
name = "my-data-platform"
version = "0.1.0"
description = "A data platform built with modern data engineering tools, just for fun."
authors = [
    {name = "Marco Di Spirito",email = "marco.n.dispirito@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "nba-api (>=1.9.0,<2.0.0)",
    "boto3 (>=1.34.0,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "localstack-client>=2.6.0",
    "awscli>=1.32.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
